* 2013-03-31    Mark Kathmann     <mark@stackedbits.com>
- Initial public release of Auth_AD library (v0.2)